[package]
name = "matter-hub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
include.workspace = true
build = "src/build.rs"

[dependencies]
color-eyre = "0.6.5"
mimalloc = { version = "0.1.48", features = ["v3"] }
